# ContextFinderFIM

./: .gitignore  README.md  pyproject.toml
benchmark_tool/: README.md  config.json
benchmark_tool/src/: ast_parser.py  code_processor.py  config.py
benchmark_tool/src/dataset/: dataset.py  example.py
benchmark_tool/src/scripts/: generate_examples.py  process_project.py
benchmark_tool/src/transformers/: __init__.py  base.py  function_body.py  function_calls.py  imports.py
benchmark_tool/src/utils/: file_utils.py  logging_utils.py
example/: advanced_analytics.py  data_processor.py  example.py  time_series_utils.py
experiments/: exps.ipynb
src/: code_context_collector.py  code_llama_fim.py  evaluate_fim_with_context.py  example_usage.py  fim_cli.py  fim_metrics.py  get_cursor_position.py
src/utils/: aggregate_metrics.py
tests/: test_code_context_collector_specific.py
