[tool.poetry]
name = "diploma"
version = "0.1.0"
description = ""
authors = ["Stepa Belyakov <stepan.belyakov@kuper.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
transformers = "^4.49.0"
pytest = "^8.3.4"
astor = "^0.8.1"
nltk = "^3.9.1"
rouge-score = "^0.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
